fix background position on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -4,6 +4,7 @@
         flex-direction: column;
         justify-content: flex-start;
         height: 100%;
+        background-position: left;
     }
     .main{
         width: 100%;
@@ -61,7 +62,7 @@
     }
 }
 
-@media screen and (max-height: 800px) {
+/* @media screen and (max-height: 800px) {
     .main{
         padding: 40px 40px 52px;
     }
@@ -71,4 +72,4 @@
     .form{
         margin-top: 40px;
     }
-}
+} */
